<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/my_settings_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/my_settings"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/breath_settings_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dnd_settings_button"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/background"
            android:padding="16dp"
            android:src="@drawable/wind"
            android:contentDescription="@string/todo"/>

        <TextView
            android:id="@+id/breath_settings_textview"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/background"
            android:gravity="center_vertical"
            android:text="@string/breath_presets"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView31"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/background"
            android:padding="16dp"
            android:src="@drawable/chevron_right"
            android:contentDescription="@string/todo"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/contact_settings_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goal_settings_button">


        <ImageView
            android:id="@+id/imageView214"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/background"
            android:padding="16dp"
            android:src="@drawable/mail"
            android:contentDescription="@string/todo"/>

        <TextView
            android:id="@+id/contact_settings_textview"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/background"
            android:gravity="center_vertical"
            android:text="@string/contact"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView351"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/background"
            android:padding="16dp"
            android:src="@drawable/chevron_right"
            android:contentDescription="@string/todo"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/legal_settings_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_settings_button">


        <ImageView
            android:id="@+id/imageView2145"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/background"
            android:padding="16dp"
            android:src="@drawable/file_text"
            android:contentDescription="@string/todo"/>

        <TextView
            android:id="@+id/legal_settings_textview"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/background"
            android:gravity="center_vertical"
            android:text="@string/legal"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView35g1"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/background"
            android:padding="16dp"
            android:src="@drawable/chevron_right"
            android:contentDescription="@string/todo"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/goal_settings_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer_settings_button">

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/background"
            android:padding="16dp"
            android:src="@drawable/check_circle_default"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/goal_settings_textview"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/background"
            android:gravity="center_vertical"
            android:text="@string/weekly_goal"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/background"
            android:padding="16dp"
            android:src="@drawable/chevron_right"
            android:contentDescription="@string/todo"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/vibration_settings_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_settings_textview"
        app:layout_constraintVertical_bias="0">

        <ImageView
            android:id="@+id/imageView221"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/background"
            android:padding="16dp"
            android:src="@drawable/activity"
            android:contentDescription="@string/todo"/>

        <TextView
            android:id="@+id/vibrate_settings_textview"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/background"
            android:gravity="center_vertical"
            android:text="@string/vibration"
            android:textSize="24sp" />

        <Switch
            android:id="@+id/vibration_switch"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/background"
            android:padding="16dp"
            tools:ignore="UseSwitchCompatOrMaterialXml,DuplicateSpeakableTextCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dnd_settings_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vibration_settings_button"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView2121"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/background"
            android:padding="16dp"
            android:src="@drawable/bell_off"
            android:contentDescription="@string/todo"/>

        <TextView
            android:id="@+id/dnd_settings_textview"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/background"
            android:gravity="center_vertical"
            android:text="@string/do_not_disturb"
            android:textSize="24sp" />

        <Switch
            android:id="@+id/do_not_disturb_switch"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/background"
            android:padding="16dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/timer_settings_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breath_settings_button">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/background"
            android:padding="16dp"
            android:src="@drawable/clock"
            android:contentDescription="@string/todo"/>

        <TextView
            android:id="@+id/timer_settings_textview"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/background"
            android:gravity="center_vertical"
            android:text="@string/timer_presets"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/background"
            android:padding="16dp"
            android:src="@drawable/chevron_right"
            android:contentDescription="@string/todo"/>
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer_settings_button" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breath_settings_button" />

    <View
        android:id="@+id/divider3"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goal_settings_button" />

    <View
        android:id="@+id/divider4"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vibration_settings_button" />

    <View
        android:id="@+id/divider5"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dnd_settings_button" />

    <View
        android:id="@+id/divider6"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_settings_button" />

    <View
        android:id="@+id/divider7"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/legal_settings_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>